Color contrast fixed

--- a/styles/record.css
+++ b/styles/record.css
@@ -4,7 +4,7 @@ main {
 
 main p {
     font-size: 24pt;
-    color: red;
+    color: navy;
     font-weight: 700;
     grid-column: 1 / 3;
     margin-left: 1rem;
